Fix spacing of sidebar

--- a/src/styles/components/sites/_player-sidebar.scss
+++ b/src/styles/components/sites/_player-sidebar.scss
@@ -155,7 +155,7 @@
 
       .tooltip {
         margin-left: .75rem;
-        width: 100%;
+        width: calc(100% - .75rem);
 
         .button {
           color: var(--gray-500);
